Shira/force-app/main/default/objects/Project__c/fields/AccountProject__c.field-meta.xml
<CustomField>
    <fullName>AccountProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>חברה מבקשת</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>פרויקט</relationshipLabel>
    <relationshipName>AccountProject</relationshipName>
    <type>Lookup</type>
</CustomField>