Shira/force-app/main/default/objects/Project__c/fields/ActualReportedHoursPro__c.field-meta.xml
<CustomField>
    <fullName>ActualReportedHoursPro__c</fullName>
    <label>מספר שעו תשדווחו בפועל</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>