Shira/force-app/main/default/objects/Project__c/fields/DepartmentManagerProject__c.field-meta.xml
<CustomField>
    <fullName>DepartmentManagerProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מנהל מחלקה</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>פרויקט (מנהל מחלקה)</relationshipLabel>
    <relationshipName>DepartmentManagerProject</relationshipName>
    <type>Lookup</type>
</CustomField>