Shira/force-app/main/default/objects/Project__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>סוג פרויקט</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>אקספרימנטל</fullName>
            </value>
            <value>
                <fullName>TC/STC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>