Shira/force-app/main/default/objects/Project__c/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>שעות עבודה משוערות לפרויקט</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>