Shira/force-app/main/default/objects/Project__c/fields/Field3__c.field-meta.xml
<CustomField>
    <fullName>Field3__c</fullName>
    <label>סטטוס פרויקט</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>חדש</fullName>
            </value>
            <value>
                <fullName>הגדרת בסיס רישוי</fullName>
            </value>
            <value>
                <fullName>פעיל</fullName>
            </value>
            <value>
                <fullName>ממתין לתשלום אגרה</fullName>
            </value>
            <value>
                <fullName>הפקת תעודה</fullName>
            </value>
            <value>
                <fullName>נסגר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>