Shira/force-app/main/default/objects/Project__c/fields/POCProject__c.field-meta.xml
<CustomField>
    <fullName>POCProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>פרויקט (POC)</relationshipLabel>
    <relationshipName>POCProject</relationshipName>
    <type>Lookup</type>
</CustomField>