Shira/force-app/main/default/objects/Project__c/fields/PoMana__c.field-meta.xml
<CustomField>
    <fullName>PoMana__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מנהל פרויקט</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>פרויקט</relationshipLabel>
    <relationshipName>ProManager</relationshipName>
    <type>Lookup</type>
</CustomField>