Shira/force-app/main/default/objects/Project__c/fields/ProjectLocationTraveling__c.field-meta.xml
<CustomField>
    <fullName>ProjectLocationTraveling__c</fullName>
    <label>מיקום נסיעות</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>