Shira/force-app/main/default/objects/Project__c/fields/ProjectValidity__c.field-meta.xml
<CustomField>
    <fullName>ProjectValidity__c</fullName>
    <label>תוקף הפרויקט</label>
    <type>Date</type>
</CustomField>