Shira/force-app/main/default/objects/Project__c/fields/ProNmae__c.field-meta.xml
<CustomField>
    <fullName>ProNmae__c</fullName>
    <label>שם פרויקט</label>
    <length>20</length>
    <type>Text</type>
</CustomField>