Shira/force-app/main/default/objects/Project__c/fields/ProNum__c.field-meta.xml
<CustomField>
    <fullName>ProNum__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>מספר פרויקט</label>
    <type>AutoNumber</type>
</CustomField>