Shira/force-app/main/default/objects/Project__c/fields/ProRequestContact__c.field-meta.xml
<CustomField>
    <fullName>ProRequestContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שם מבקש</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>פרויקט (שם מבקש)</relationshipLabel>
    <relationshipName>ProRequestContact</relationshipName>
    <type>Lookup</type>
</CustomField>