Shira/force-app/main/default/objects/Project__c/fields/ProServiceDetail__c.field-meta.xml
<CustomField>
    <fullName>ProServiceDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>פירוט השירות</label>
    <referenceTo>ServiceTypesDetails__c</referenceTo>
    <relationshipLabel>פרויקט</relationshipLabel>
    <relationshipName>ProServiceDetail</relationshipName>
    <type>Lookup</type>
</CustomField>