Shira/force-app/main/default/objects/Project__c/fields/ProTypeService__c.field-meta.xml
<CustomField>
    <fullName>ProTypeService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>סוג שירות</label>
    <referenceTo>ServiceTypes__c</referenceTo>
    <relationshipLabel>פרויקט</relationshipLabel>
    <relationshipName>ProTypeService</relationshipName>
    <type>Lookup</type>
</CustomField>