Shira/force-app/main/default/objects/Project__c/fields/RequestInPro__c.field-meta.xml
<CustomField>
    <fullName>RequestInPro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>בקשה</label>
    <referenceTo>Requests__c</referenceTo>
    <relationshipLabel>פרויקט</relationshipLabel>
    <relationshipName>RequestInPro</relationshipName>
    <type>Lookup</type>
</CustomField>