Shira/force-app/main/default/objects/Project__c/fields/TraveledRequired__c.field-meta.xml
<CustomField>
    <fullName>TraveledRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>האם  הפרויקט ידרוש נסיעות רת&quot;א?</label>
    <type>Checkbox</type>
</CustomField>